# python-template

./: README.md  pdm.toml  pyproject.toml  pyrightconfig.json
src/template/: app.py
