[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "template"
version = "0.0.1"
description = "Python template"
authors = [
  { name = "qomaeng", email = "qomaeng@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.2",
  "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
  "bandit>=1.8.6",
  "black>=25.9.0",
  "coverage>=7.10.6",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[tool.uv.build-backend]
module-root = "."
source-include = ["template/**"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E203", # whitespace before ':', handled by black
  "E501", # line too long, handled by black
  "C901", # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["template"]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.bandit]
skips = ["B101"] # assert

[tool.pytest.ini_options]
addopts = "-ra -q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["template"]

[tool.coverage.report]
show_covered = true
show_missing = true

[tool.coverage.html]
show_contexts = true
