[project]
name = "template"
version = "0.0.1"
description = "Python template"
authors = [{ name = "qomaeng", email = "qomaeng@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116.2",
  "uvicorn[standard]>=0.36.0",
]

[dependency-groups]
dev = [
  "black>=25.9.0",
  "coverage>=7.10.6",
  "pyright>=1.1.405",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/.*", "**/__pycache__"]
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src"

[tool.ruff]
include = ["pyproject.toml", "{src,tests}/**/*.{py,pyi}"]
extend-exclude = ["**/.*"]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "A",   # flake8-builtins
  "S",   # flake8-bandit (security)
  "SIM", # flake8-simplify
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
]
ignore = [
  "E501", # line too long, handled by black
  "S101", # assert
]

[tool.black]
include = '^/(src|tests)/.*\.pyi?$'
extend-exclude = '''
(
  /\.[^/]+
)
'''
target-version = ["py313"]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
omit = ["**/.*"]
show_missing = true

[tool.coverage.html]
show_contexts = true
